# motorsim

./: README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
FEM_Simulator/: debug.msh  requirements.txt
FEM_Simulator/src/: app.py
FEM_Simulator/src/analysis/: solver.py
FEM_Simulator/src/core/: models.py  regions.py
FEM_Simulator/src/geometry/: builder.py  builder_sector.py
FEM_Simulator/src/gui/: canvas.py  main_window.py  mesher_panel.py  parameter_panel.py
FEM_Simulator/tests/: conftest.py  generate_baseline.py  test_geometry.py  test_physics.py  test_sector_basic.py  test_visuals.py
examples/: plot_geometry.py  plot_gmsh_mesh.py  simple_pmsm.py
motor-cad/src/analysis/: solver.py
motor-cad/tests/: test_solver_sanity.py
motoroptix/: pyproject.toml
motoroptix/core/: motor.py
motoroptix/fea/: electromagnetic_solver.py
motoroptix/geometry/: dxf_parser.py
motoroptix/motors/: __init__.py  bldc.py  srm.py
motoroptix/optimization/: optimizer.py
motoroptix/tests/: conftest.py  test_bldc_motor.py  test_motoroptix_core.py  test_optimization.py  test_srm_motor.py
src/: main.py
src/core/: fem_solver.py  magnetic_physics.py  simulation.py
src/geometry/: motor_components.py
src/gui/: geometry_viewer.py  material_editor.py  results_viewer.py  rotor_parameter_panel.py  stator_parameter_panel.py
src/materials/: material_properties.py
src/mesh/: mesh_generator.py
src/optimization/: parameter_optimizer.py
