[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "motoroptix"
version = "0.1.0"
description = "Motor optimization and analysis toolkit"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
    "shapely>=2.1.1",
    "ezdxf>=1.4.2",
    "gmsh>=4.13.1",
    "fenics-dolfinx>=0.9.0",
    "mpich>=4.1.0",
    "pyvista>=0.42.0",
    "optuna>=4.3.0",
    "pydantic<2",
    "cycler>=0.12.0",
    "plotly>=5.18.0",
]

[tool.setuptools]
packages = ["motoroptix"] 